--- a/Project/1st_step.ipynb
+++ b/Project/1st_step.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 85,
    "id": "fb2ac504",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 86,
    "id": "31d737ae",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "4      27.050000              0.714586         7.808  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,8 +213,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "3fd0cd8b",
+   "execution_count": 73,
+   "id": "96fe5df7",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>store</th>\n",
        "      <th>department</th>\n",
        "      <th>weekly_sales</th>\n",
@@ -256,11 +255,9 @@
        "      <td>10774.000000</td>\n",
        "      <td>10774.000000</td>\n",
        "      <td>10774.000000</td>\n",
-       "      <td>10774.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>5386.500000</td>\n",
        "      <td>15.441897</td>\n",
        "      <td>45.218118</td>\n",
        "      <td>23843.950149</td>\n",
@@ -270,7 +267,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>3110.330234</td>\n",
        "      <td>11.534511</td>\n",
        "      <td>29.867779</td>\n",
        "      <td>30220.387557</td>\n",
@@ -280,7 +276,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>-1098.000000</td>\n",
@@ -290,7 +285,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>2693.250000</td>\n",
        "      <td>4.000000</td>\n",
        "      <td>20.000000</td>\n",
        "      <td>3867.115000</td>\n",
@@ -300,7 +294,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>5386.500000</td>\n",
        "      <td>13.000000</td>\n",
        "      <td>40.000000</td>\n",
        "      <td>12049.065000</td>\n",
@@ -310,7 +303,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>8079.750000</td>\n",
        "      <td>20.000000</td>\n",
        "      <td>72.000000</td>\n",
        "      <td>32349.850000</td>\n",
@@ -320,7 +312,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>10773.000000</td>\n",
        "      <td>39.000000</td>\n",
        "      <td>99.000000</td>\n",
        "      <td>293966.050000</td>\n",
@@ -333,15 +324,15 @@
        "</div>"
       ],
       "text/plain": [
-       "         Unnamed: 0         store    department   weekly_sales  temperature_c  \\\n",
-       "count  10774.000000  10774.000000  10774.000000   10774.000000   10774.000000   \n",
-       "mean    5386.500000     15.441897     45.218118   23843.950149      15.731978   \n",
-       "std     3110.330234     11.534511     29.867779   30220.387557       9.922446   \n",
-       "min        0.000000      1.000000      1.000000   -1098.000000      -8.366667   \n",
-       "25%     2693.250000      4.000000     20.000000    3867.115000       7.583333   \n",
-       "50%     5386.500000     13.000000     40.000000   12049.065000      16.966667   \n",
-       "75%     8079.750000     20.000000     72.000000   32349.850000      24.166667   \n",
-       "max    10773.000000     39.000000     99.000000  293966.050000      33.827778   \n",
+       "              store    department   weekly_sales  temperature_c  \\\n",
+       "count  10774.000000  10774.000000   10774.000000   10774.000000   \n",
+       "mean      15.441897     45.218118   23843.950149      15.731978   \n",
+       "std       11.534511     29.867779   30220.387557       9.922446   \n",
+       "min        1.000000      1.000000   -1098.000000      -8.366667   \n",
+       "25%        4.000000     20.000000    3867.115000       7.583333   \n",
+       "50%       13.000000     40.000000   12049.065000      16.966667   \n",
+       "75%       20.000000     72.000000   32349.850000      24.166667   \n",
+       "max       39.000000     99.000000  293966.050000      33.827778   \n",
        "\n",
        "       fuel_price_usd_per_l  unemployment  \n",
        "count          10774.000000  10774.000000  \n",
@@ -354,38 +345,301 @@
        "max                1.107674      9.765000  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sales_data.describe()"
+    "sales_data.describe()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cc952e81",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96fe5df7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "5d5e79ac",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Unnamed: 0', 'store', 'type', 'department', 'date', 'weekly_sales',\n",
+      "       'is_holiday', 'temperature_c', 'fuel_price_usd_per_l', 'unemployment'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sales_data.columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "be1c6a91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>store</th>\n",
+       "      <th>type</th>\n",
+       "      <th>department</th>\n",
+       "      <th>date</th>\n",
+       "      <th>weekly_sales</th>\n",
+       "      <th>is_holiday</th>\n",
+       "      <th>temperature_c</th>\n",
+       "      <th>fuel_price_usd_per_l</th>\n",
+       "      <th>unemployment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-02-05</td>\n",
+       "      <td>24924.50</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5.727778</td>\n",
+       "      <td>0.679451</td>\n",
+       "      <td>8.106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-03-05</td>\n",
+       "      <td>21827.90</td>\n",
+       "      <td>False</td>\n",
+       "      <td>8.055556</td>\n",
+       "      <td>0.693452</td>\n",
+       "      <td>8.106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-04-02</td>\n",
+       "      <td>57258.43</td>\n",
+       "      <td>False</td>\n",
+       "      <td>16.816667</td>\n",
+       "      <td>0.718284</td>\n",
+       "      <td>7.808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-05-07</td>\n",
+       "      <td>17413.94</td>\n",
+       "      <td>False</td>\n",
+       "      <td>22.527778</td>\n",
+       "      <td>0.748928</td>\n",
+       "      <td>7.808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-06-04</td>\n",
+       "      <td>17558.09</td>\n",
+       "      <td>False</td>\n",
+       "      <td>27.050000</td>\n",
+       "      <td>0.714586</td>\n",
+       "      <td>7.808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-07-02</td>\n",
+       "      <td>16333.14</td>\n",
+       "      <td>False</td>\n",
+       "      <td>27.172222</td>\n",
+       "      <td>0.705076</td>\n",
+       "      <td>7.787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-08-06</td>\n",
+       "      <td>17508.41</td>\n",
+       "      <td>False</td>\n",
+       "      <td>30.644444</td>\n",
+       "      <td>0.693980</td>\n",
+       "      <td>7.787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-09-03</td>\n",
+       "      <td>16241.78</td>\n",
+       "      <td>False</td>\n",
+       "      <td>27.338889</td>\n",
+       "      <td>0.680772</td>\n",
+       "      <td>7.787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-10-01</td>\n",
+       "      <td>20094.19</td>\n",
+       "      <td>False</td>\n",
+       "      <td>22.161111</td>\n",
+       "      <td>0.687640</td>\n",
+       "      <td>7.838</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-11-05</td>\n",
+       "      <td>34238.88</td>\n",
+       "      <td>False</td>\n",
+       "      <td>14.855556</td>\n",
+       "      <td>0.710359</td>\n",
+       "      <td>7.838</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   store type  department        date  weekly_sales  is_holiday  \\\n",
+       "0      1    A           1  2010-02-05      24924.50       False   \n",
+       "1      1    A           1  2010-03-05      21827.90       False   \n",
+       "2      1    A           1  2010-04-02      57258.43       False   \n",
+       "3      1    A           1  2010-05-07      17413.94       False   \n",
+       "4      1    A           1  2010-06-04      17558.09       False   \n",
+       "5      1    A           1  2010-07-02      16333.14       False   \n",
+       "6      1    A           1  2010-08-06      17508.41       False   \n",
+       "7      1    A           1  2010-09-03      16241.78       False   \n",
+       "8      1    A           1  2010-10-01      20094.19       False   \n",
+       "9      1    A           1  2010-11-05      34238.88       False   \n",
+       "\n",
+       "   temperature_c  fuel_price_usd_per_l  unemployment  \n",
+       "0       5.727778              0.679451         8.106  \n",
+       "1       8.055556              0.693452         8.106  \n",
+       "2      16.816667              0.718284         7.808  \n",
+       "3      22.527778              0.748928         7.808  \n",
+       "4      27.050000              0.714586         7.808  \n",
+       "5      27.172222              0.705076         7.787  \n",
+       "6      30.644444              0.693980         7.787  \n",
+       "7      27.338889              0.680772         7.787  \n",
+       "8      22.161111              0.687640         7.838  \n",
+       "9      14.855556              0.710359         7.838  "
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove irrelevant columns \n",
+    "if 'Unnamed: 0' in sales_data.columns:\n",
+    "    sales_data.drop(columns=['Unnamed: 0'], inplace=True)\n",
+    "sales_data.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "be641976",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     10774.000000\n",
+       "mean      23843.950149\n",
+       "std       30220.387557\n",
+       "min       -1098.000000\n",
+       "25%        3867.115000\n",
+       "50%       12049.065000\n",
+       "75%       32349.850000\n",
+       "max      293966.050000\n",
+       "Name: weekly_sales, dtype: float64"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_data['weekly_sales'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "1160bb57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean:  23843.95014850566\n",
+      "Median:  12049.064999999999\n",
+      "Standard Deviation:  30220.387556900612\n",
+      "Max:  293966.05\n",
+      "Min:  -1098.0\n",
+      "25th Percentile:  3867.1150000000002\n",
+      "75th Percentile:  32349.85\n"
+     ]
+    }
+   ],
+   "source": [
+    "sales_data['weekly_sales'].mean()\n",
+    "print(\"Mean: \", sales_data['weekly_sales'].mean())\n",
+    "sales_data['weekly_sales'].median()\n",
+    "print(\"Median: \", sales_data['weekly_sales'].median())\n",
+    "sales_data['weekly_sales'].std()\n",
+    "print(\"Standard Deviation: \", sales_data['weekly_sales'].std())\n",
+    "sales_data['weekly_sales'].max()\n",
+    "print(\"Max: \", sales_data['weekly_sales'].max())\n",
+    "sales_data['weekly_sales'].min()\n",
+    "print(\"Min: \", sales_data['weekly_sales'].min())\n",
+    "sales_data['weekly_sales'].quantile(0.25)\n",
+    "print(\"25th Percentile: \", sales_data['weekly_sales'].quantile(0.25))\n",
+    "sales_data['weekly_sales'].quantile(0.75)\n",
+    "print(\"75th Percentile: \", sales_data['weekly_sales'].quantile(0.75))\n"
+   ]
   }
  ],
  "metadata": {
