--- a/Project/1st_step.ipynb
+++ b/Project/1st_step.ipynb
@@ -640,6 +640,135 @@
     "sales_data['weekly_sales'].quantile(0.75)\n",
     "print(\"75th Percentile: \", sales_data['weekly_sales'].quantile(0.75))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "00a8515a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10774 entries, 0 to 10773\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   store                 10774 non-null  int64  \n",
+      " 1   type                  10774 non-null  object \n",
+      " 2   department            10774 non-null  int64  \n",
+      " 3   date                  10774 non-null  object \n",
+      " 4   weekly_sales          10774 non-null  float64\n",
+      " 5   is_holiday            10774 non-null  bool   \n",
+      " 6   temperature_c         10774 non-null  float64\n",
+      " 7   fuel_price_usd_per_l  10774 non-null  float64\n",
+      " 8   unemployment          10774 non-null  float64\n",
+      "dtypes: bool(1), float64(4), int64(2), object(2)\n",
+      "memory usage: 684.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "sales_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "fe5d6b2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        2.492450e+04\n",
+       "1        4.675240e+04\n",
+       "2        1.040108e+05\n",
+       "3        1.214248e+05\n",
+       "4        1.389829e+05\n",
+       "             ...     \n",
+       "10769    2.568930e+08\n",
+       "10770    2.568934e+08\n",
+       "10771    2.568938e+08\n",
+       "10772    2.568938e+08\n",
+       "10773    2.568947e+08\n",
+       "Name: weekly_sales, Length: 10774, dtype: float64"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_data['weekly_sales'].cumsum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "e9ec72ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         24924.50\n",
+       "1         24924.50\n",
+       "2         57258.43\n",
+       "3         57258.43\n",
+       "4         57258.43\n",
+       "           ...    \n",
+       "10769    293966.05\n",
+       "10770    293966.05\n",
+       "10771    293966.05\n",
+       "10772    293966.05\n",
+       "10773    293966.05\n",
+       "Name: weekly_sales, Length: 10774, dtype: float64"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_data['weekly_sales'].cummax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "a327ecc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        24924.50\n",
+       "1        21827.90\n",
+       "2        21827.90\n",
+       "3        17413.94\n",
+       "4        17413.94\n",
+       "           ...   \n",
+       "10769    -1098.00\n",
+       "10770    -1098.00\n",
+       "10771    -1098.00\n",
+       "10772    -1098.00\n",
+       "10773    -1098.00\n",
+       "Name: weekly_sales, Length: 10774, dtype: float64"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_data['weekly_sales'].cummin()"
+   ]
   }
  ],
  "metadata": {
