--- a/Project/handling_catagorical_data.ipynb
+++ b/Project/handling_catagorical_data.ipynb
@@ -2,20 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "b89e1da4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "e7e3a622",
+   "execution_count": 1,
+   "id": "87c40f6b",
    "metadata": {},
    "outputs": [
     {
@@ -26,28 +14,7 @@
       "data_dir:  c:\\Users\\tareq\\sales Project\\Data_set\n",
       "data_set:  c:\\Users\\tareq\\sales Project\\Data_set\\sales Data.csv\n"
      ]
-    }
-   ],
-   "source": [
-    "os.getcwd()\n",
-    "root_dir = os.path.dirname(os.getcwd())\n",
-    "root_dir\n",
-    "data_dir = os.path.join(root_dir, 'Data_set')\n",
-    "data_dir\n",
-    "data_set = os.path.join(data_dir, 'sales Data.csv')\n",
-    "data_set\n",
-    "\n",
-    "print(\"root_dir: \", root_dir)\n",
-    "print(\"data_dir: \", data_dir)    \n",
-    "print(\"data_set: \", data_set)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "e4fe44c6",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -260,20 +227,62 @@
        "[100 rows x 10 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "os.getcwd()\n",
+    "root_dir = os.path.dirname(os.getcwd())\n",
+    "root_dir\n",
+    "data_dir = os.path.join(root_dir, 'Data_set')\n",
+    "data_dir\n",
+    "data_set = os.path.join(data_dir, 'sales Data.csv')\n",
+    "data_set\n",
+    "\n",
+    "print(\"root_dir: \", root_dir)\n",
+    "print(\"data_dir: \", data_dir)    \n",
+    "print(\"data_set: \", data_set)\n",
+    "\n",
+    "\n",
     "sales_data =pd.read_csv(data_set)\n",
     "sales_data.head(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1bff99bd",
+   "execution_count": 26,
+   "id": "839dee38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "A       9872\n",
+       "B        902\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_data[['type']].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9136f1b6",
    "metadata": {},
    "outputs": [
     {
@@ -375,71 +384,6 @@
        "      <td>0.714586</td>\n",
        "      <td>7.808</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-07-02</td>\n",
-       "      <td>16333.14</td>\n",
-       "      <td>False</td>\n",
-       "      <td>27.172222</td>\n",
-       "      <td>0.705076</td>\n",
-       "      <td>7.787</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-08-06</td>\n",
-       "      <td>17508.41</td>\n",
-       "      <td>False</td>\n",
-       "      <td>30.644444</td>\n",
-       "      <td>0.693980</td>\n",
-       "      <td>7.787</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-09-03</td>\n",
-       "      <td>16241.78</td>\n",
-       "      <td>False</td>\n",
-       "      <td>27.338889</td>\n",
-       "      <td>0.680772</td>\n",
-       "      <td>7.787</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-10-01</td>\n",
-       "      <td>20094.19</td>\n",
-       "      <td>False</td>\n",
-       "      <td>22.161111</td>\n",
-       "      <td>0.687640</td>\n",
-       "      <td>7.838</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-11-05</td>\n",
-       "      <td>34238.88</td>\n",
-       "      <td>False</td>\n",
-       "      <td>14.855556</td>\n",
-       "      <td>0.710359</td>\n",
-       "      <td>7.838</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -451,38 +395,23 @@
        "2           2      1    A           1  2010-04-02      57258.43       False   \n",
        "3           3      1    A           1  2010-05-07      17413.94       False   \n",
        "4           4      1    A           1  2010-06-04      17558.09       False   \n",
-       "5           5      1    A           1  2010-07-02      16333.14       False   \n",
-       "6           6      1    A           1  2010-08-06      17508.41       False   \n",
-       "7           7      1    A           1  2010-09-03      16241.78       False   \n",
-       "8           8      1    A           1  2010-10-01      20094.19       False   \n",
-       "9           9      1    A           1  2010-11-05      34238.88       False   \n",
        "\n",
        "   temperature_c  fuel_price_usd_per_l  unemployment  \n",
        "0       5.727778              0.679451         8.106  \n",
        "1       8.055556              0.693452         8.106  \n",
        "2      16.816667              0.718284         7.808  \n",
        "3      22.527778              0.748928         7.808  \n",
-       "4      27.050000              0.714586         7.808  \n",
-       "5      27.172222              0.705076         7.787  \n",
-       "6      30.644444              0.693980         7.787  \n",
-       "7      27.338889              0.680772         7.787  \n",
-       "8      22.161111              0.687640         7.838  \n",
-       "9      14.855556              0.710359         7.838  "
+       "4      27.050000              0.714586         7.808  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "def normalize (col):\n",
-    "    mean = col.mean()\n",
-    "    std = col.std()\n",
-    "    return (col - mean) / std\n",
-    "sales_data['weekly_sales'].agg([normalize])\n",
-    "sales_data.head(10)"
+    "sales_data.groupby('type')\n",
+    "sales_data.head()"
    ]
   }
  ],
