--- a/Project/handling_catagorical_data.ipynb
+++ b/Project/handling_catagorical_data.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "id": "9136f1b6",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>store</th>\n",
        "      <th>type</th>\n",
        "      <th>department</th>\n",
@@ -321,7 +320,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>A</td>\n",
        "      <td>1</td>\n",
@@ -335,7 +333,6 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>A</td>\n",
        "      <td>1</td>\n",
        "      <td>2010-03-05</td>\n",
@@ -347,7 +344,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>A</td>\n",
        "      <td>1</td>\n",
@@ -360,7 +356,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>A</td>\n",
        "      <td>1</td>\n",
@@ -373,7 +368,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>A</td>\n",
        "      <td>1</td>\n",
@@ -389,12 +383,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  store type  department        date  weekly_sales  is_holiday  \\\n",
-       "0           0      1    A           1  2010-02-05      24924.50       False   \n",
-       "1           1      1    A           1  2010-03-05      21827.90       False   \n",
-       "2           2      1    A           1  2010-04-02      57258.43       False   \n",
-       "3           3      1    A           1  2010-05-07      17413.94       False   \n",
-       "4           4      1    A           1  2010-06-04      17558.09       False   \n",
+       "   store type  department        date  weekly_sales  is_holiday  \\\n",
+       "0      1    A           1  2010-02-05      24924.50       False   \n",
+       "1      1    A           1  2010-03-05      21827.90       False   \n",
+       "2      1    A           1  2010-04-02      57258.43       False   \n",
+       "3      1    A           1  2010-05-07      17413.94       False   \n",
+       "4      1    A           1  2010-06-04      17558.09       False   \n",
        "\n",
        "   temperature_c  fuel_price_usd_per_l  unemployment  \n",
        "0       5.727778              0.679451         8.106  \n",
@@ -404,19 +398,21 @@
        "4      27.050000              0.714586         7.808  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sales_data.groupby('type')\n",
+    "sales_data.head()\n",
+    "sales_data.drop(columns=['Unnamed: 0'], inplace=True)\n",
     "sales_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "id": "8ed48c2f",
    "metadata": {},
    "outputs": [
@@ -433,14 +429,27 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead th {\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
+       "    <tr>\n",
        "      <th></th>\n",
+       "      <th colspan=\"4\" halign=\"left\">weekly_sales</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">unemployment</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
        "      <th>mean</th>\n",
        "      <th>std</th>\n",
        "      <th>min</th>\n",
@@ -448,6 +457,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -461,6 +474,10 @@
        "      <td>30129.407656</td>\n",
        "      <td>-1098.0</td>\n",
        "      <td>293966.05</td>\n",
+       "      <td>7.972611</td>\n",
+       "      <td>0.521748</td>\n",
+       "      <td>3.879</td>\n",
+       "      <td>8.992</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
@@ -468,25 +485,36 @@
        "      <td>31155.867745</td>\n",
        "      <td>-798.0</td>\n",
        "      <td>232558.51</td>\n",
+       "      <td>9.279323</td>\n",
+       "      <td>0.335157</td>\n",
+       "      <td>7.170</td>\n",
+       "      <td>9.765</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              mean           std     min        max\n",
-       "type                                               \n",
-       "A     23674.667242  30129.407656 -1098.0  293966.05\n",
-       "B     25696.678370  31155.867745  -798.0  232558.51"
+       "      weekly_sales                                  unemployment            \\\n",
+       "              mean           std     min        max         mean       std   \n",
+       "type                                                                         \n",
+       "A     23674.667242  30129.407656 -1098.0  293966.05     7.972611  0.521748   \n",
+       "B     25696.678370  31155.867745  -798.0  232558.51     9.279323  0.335157   \n",
+       "\n",
+       "                    \n",
+       "        min    max  \n",
+       "type                \n",
+       "A     3.879  8.992  \n",
+       "B     7.170  9.765  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sale = sales_data.groupby('type')[\"weekly_sales\"].agg(['mean', 'std', 'min', 'max'])\n",
+    "sale = sales_data.groupby('type')[[\"weekly_sales\",\"unemployment\"]].agg(['mean', 'std', 'min', 'max'])\n",
     "sale.head()\n",
     "\n"
    ]
