--- a/Project/handling_catagorical_data.ipynb
+++ b/Project/handling_catagorical_data.ipynb
@@ -521,23 +521,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "id": "b305c780",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(23843.95014850566)"
+       "Index(['store', 'type', 'department', 'date', 'weekly_sales', 'is_holiday',\n",
+       "       'temperature_c', 'fuel_price_usd_per_l', 'unemployment'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sales_data['weekly_sales'].mean()"
+    "sales_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "489fb068",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">mean</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">std</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">min</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>temperature_c</th>\n",
+       "      <th>unemployment</th>\n",
+       "      <th>temperature_c</th>\n",
+       "      <th>unemployment</th>\n",
+       "      <th>temperature_c</th>\n",
+       "      <th>unemployment</th>\n",
+       "      <th>temperature_c</th>\n",
+       "      <th>unemployment</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>15.231333</td>\n",
+       "      <td>7.972611</td>\n",
+       "      <td>9.879783</td>\n",
+       "      <td>0.521748</td>\n",
+       "      <td>-8.366667</td>\n",
+       "      <td>3.879</td>\n",
+       "      <td>33.300000</td>\n",
+       "      <td>8.992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>21.211327</td>\n",
+       "      <td>9.279323</td>\n",
+       "      <td>8.661237</td>\n",
+       "      <td>0.335157</td>\n",
+       "      <td>6.350000</td>\n",
+       "      <td>7.170</td>\n",
+       "      <td>33.827778</td>\n",
+       "      <td>9.765</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              mean                        std                        min  \\\n",
+       "     temperature_c unemployment temperature_c unemployment temperature_c   \n",
+       "type                                                                       \n",
+       "A        15.231333     7.972611      9.879783     0.521748     -8.366667   \n",
+       "B        21.211327     9.279323      8.661237     0.335157      6.350000   \n",
+       "\n",
+       "                            max               \n",
+       "     unemployment temperature_c unemployment  \n",
+       "type                                          \n",
+       "A           3.879     33.300000        8.992  \n",
+       "B           7.170     33.827778        9.765  "
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grp_sale = sales_data.pivot_table(\n",
+    "    index='type', \n",
+    "    values=['temperature_c','unemployment'], \n",
+    "    aggfunc=['mean', 'std', 'min', 'max'])\n",
+    "grp_sale.head()\n"
    ]
   }
  ],
